...
      const val MESSAGE_FIELD = "messageField"
      const val CURRENT_LOCATION = "currentLocation"
    }

    /** Constants for tagging UI components specific to the CreateAlertScreen * */
    object CreateAlertScreen {
      const val SCREEN = "createAlertScreen"
      const val SUBMIT_BUTTON = "submitButton"
    }

    /** Constants for tagging UI components specific to the EditAlertScreen */
    object EditAlertScreen {
      const val SCREEN = "editAlertScreen"
      const val DELETE_BUTTON = "deleteButton"
      const val SAVE_BUTTON = "saveButton"
      const val RESOLVE_BUTTON = "resolveButton"
    }

    /** Constants for tagging UI components in the AlertListsScreen. */
    object AlertListsScreen {
      const val SCREEN = "alertListScreen"
...
    /** Constants for tagging UI components in the MapScreen. */
    object MapScreen {
      const val SCREEN = "mapScreen"
      const val MAP_VIEW_CONTAINER = "mapViewContainer"
      const val MY_LOCATION_BUTTON = "mapButton"
      const val BOTTOM_SHEET = "mapBottomSheet"
      const val PROFILE_PICTURE = "profilePicture"
      const val PROFILE_NAME = "profileName"
      const val ALERT_LOCATION_TEXT = "locationText"
      const val ALERT_TIME_TEXT = "alertTimeText"
      const val ALERT_PRODUCT_ICON = "alertProductIcon"
      const val ALERT_URGENCY_ICON = "alertUrgencyIcon"
      const val ALERT_MESSAGE = "alertMessage"
...
      const val RESOLVE_ALERT_BUTTON = "resolveAlertButton"
      const val ACCEPT_ALERT_BUTTON = "acceptAlertButton"
    }

    /** Constants for tagging UI components in the BottomNavigationMenu. */
    object BottomNavigationMenu {
      const val BOTTOM_NAVIGATION_MENU = "bottomNavigationMenu"
      const val BOTTOM_NAVIGATION_MENU_ITEM = "bottomNavigationMenu"
      const val CONNECTIVITY_BANNER = "connectivityBanner"
      const val CONNECTIVITY_BANNER_TEXT = "connectivityBannerText"
    }

    /** Constants for tagging UI components in the TopAppBar. */
    object TopAppBar {
      const val TOP_BAR = "topBar"
      const val GO_BACK_BUTTON = "goBackButton"
      const val SETTINGS_BUTTON = "settingsButton"
      const val CHAT_BUTTON = "chatButton"
      const val EDIT_BUTTON = "editButton"
      const val TITLE_TEXT = "titleText"
    }

    /** Constants for tagging UI components in the profile screens. */
    object ProfileScreens {
      /** Constants for tagging UI components in the CreateProfileScreen. */
      object CreateProfileScreen {
...
        const val FILTER_RADIUS_EXPLANATION_TEXT = "filterRadiusExplanationText"
      }

      /** Constants for tagging UI components in the EditProfileScreen. */
      object EditProfileScreen {
        const val SCREEN = "editProfileScreen"
        const val EDIT_PROFILE_PICTURE = "editProfilePicture"
      }

      /** Constants for tagging UI components in the ProfileScreen. */
      object ProfileScreen {
        const val SCREEN = "profileScreen"
        const val NAME_FIELD = "nameField"
        const val DESCRIPTION_FIELD = "descriptionField"
        const val CONTRIBUTION_FIELD = "contributionField"
        const val REVIEWS_SECTION = "reviewsSection"
        const val REVIEW_ONE = "reviewOne"
        const val REVIEW_TWO = "reviewTwo"
        const val NO_REVIEWS_ICON = "noReviewsIcon"
        const val NO_REVIEWS_TEXT = "noReviewsText"
        const val NO_REVIEWS_CARD = "noReviewsCard"
      }

      // Shared profile components
      const val PROFILE_PICTURE = "profilePicture"
      const val MANDATORY_SECTION = "mandatorySection"
      const val YOUR_PROFILE_SECTION = "yourProfileSection"
      const val NAME_INPUT_FIELD = "nameInputField"
      const val DOB_INPUT_FIELD = "dobInputField"
      const val DOB_MIN_AGE_TEXT = "dobMinAgeText"
      const val DESCRIPTION_INPUT_FIELD = "descriptionInputField"
      const val SAVE_BUTTON = "saveButton"
    }

    object SettingsScreen {
      const val SCREEN = "settingsScreen"
      const val REMARK_CONTAINER = "remarkContainer"
...
